Footer issue fixed, footer content no longer goes out of the screen

--- a/src/sections/footer/Footer.css
+++ b/src/sections/footer/Footer.css
@@ -9,14 +9,13 @@
   align-items: center;
   font-family: "Jura", sans-serif;
   color: white;
-  overflow: hidden;
 }
 
 /* Main Column */
 .maincolumn {
   display: flex;
-  justify-content: center;
-  gap: 40rem; /* Large gap for bigger screens */
+  justify-content: space-between;
+  width: 100%;
   text-align: center;
   padding-top: 120px;
 }
@@ -66,11 +65,13 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 55rem; /* Large gap for desktop */
+  width: 100%;
+  /* gap: 55rem; Large gap for desktop */
 }
 
 #bottomfooterline {
   color: #21aae2;
+  text-align: center;
 }
 
 .footerlist {
@@ -93,24 +94,13 @@ ul {
 /* For screens 1024px and below */
 @media (max-width: 1024px) {
   .maincolumn {
-    gap: 30rem;
     padding-top: 80px;
-  }
-
-  .bottomfooter {
-    gap: 40rem;
   }
 }
 @media (max-width: 880px) {
   .maincolumn {
     flex-direction: row;
-    gap: 15rem;
     padding-top: 80px;
-  }
-
-  .bottomfooter {
-    flex-direction: row;
-    gap: 22rem;
   }
 
   .footerlist {
@@ -120,13 +110,7 @@ ul {
 @media (max-width: 778px) {
   .maincolumn {
     flex-direction: row;
-    gap: 15rem;
     padding-top: 80px;
-  }
-
-  .bottomfooter {
-    flex-direction: row;
-    gap: 22rem;
   }
 
   .footerlist {
@@ -137,6 +121,7 @@ ul {
   .maincolumn {
     flex-direction: column;
     gap: 2rem;
+    align-items: center;
     padding-top: 50px;
   }
 
